<resources>
    <string name="app_name">FPTU Parking</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_menu">Menu</string>
    <string name="title_toolbar_share">Share</string>
    <string name="title_toolbar_notification">Notification</string>
    <string name="title_toolbar_feedback">FeedBacks</string>
    <string name="title_toolbar_feedback_reply_admin">Feedback Detail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank">Hello!</string>
    <string name="welcomeadmin">Administrator</string>
    <string name="share_info">Scan the QR code above to get the shared vehicle</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signinwith">or sign in with:</string>
    <string name="accountnotsupport">Account not support</string>
    <string name="signinfailed">Sign in failed</string>
    <string name="signinsuccess">Sign in success!</string>
    <string name="signoutsuccess">Signed out!</string>
    <!-- Button -->
    <string name="button_qr">QR Scan</string>
    <string name="button_feedback">Application</string>
    <string name="button_share">Share</string>
    <string name="button_history">History</string>
    <string name="signin">Sign in</string>
    <string name="signout">Sign out</string>
    <string name="button_signin_google">FPT.EDU.VN</string>
    <string name="button_Yes">YES</string>
    <string name="button_Cancel">CANCEL</string>
    <string name="button_CheckInfo">Check Information</string>
    <string name="button_SendNotif">Send Notification</string>
    <string name="button_PostStatus">Post Status</string>
    <string name="button_ViewFeedback">View Application</string>
    <string name="button_ClickHere">Click here to cancel</string>
    <string name="button_SendFeedBack">Send Application</string>
    <!--TextView-->
    <string name="txtProfile">Profile</string>
    <string name="txtLicense">License</string>
    <string name="txtHistory">History</string>
    <string name="txtHelp">Help</string>
    <string name="txtNotif">You have shared your vehicle.</string>
    <string name="txtNotifNotHaveVehicle">You have not registered vehicle information.</string>
    <string name="txtHistoryName">NAME</string>
    <string name="txtHistoryDatetime">TIME</string>
    <string name="txtHistoryParkingIn">Parking in</string>
    <string name="txtHistoryParkingOut">Parking out</string>
    <string name="txtNewFeedSeeMore">See More</string>
    <string name="txtNewFeedNew">News</string>
    <string name="txtStatusActive">Active</string>
    <string name="txtStatusNotActive">Not active</string>
    <string name="txtNotLicense">You have not registered to park your vehicle</string>
    <string name="txtNo">NO.</string>
    <string name="txtNumberPlate">Plate Number</string>
    <string name="txtStatus">Status</string>
    <string name="txtname">Name:</string>
    <string name="txtEmail">Email:</string>
    <string name="txtlistVehicle">List vehicle(s):</string>
    <string name="txthintsearch">Search by email...</string>
    <!--QRCode-->
    <string name="not_support">The QR Code is not support</string>
    <!--Title-->
    <string name="error">Error</string>
    <string name="information">Information</string>
    <!--Message-->
    <string name="failConnect">Failed to connect to network</string>
    <string name="parkinginsuccess">Parking in success!</string>
    <string name="parkinginfailed">Parking in failed!</string>
    <string name="parkingoutsuccess">Parking out success!</string>
    <string name="parkingoutfailed">Parking out failed!</string>
    <string name="shareSuccess">Share vehicle!</string>
    <string name="cannotshare">Can not share own vehicle!</string>
    <string name="licenseerror">Error license!</string>
    <string name="licensesuccess">License success!</string>
    <string name="emailnotexist">Email is not exist!</string>
    <string name="sendapplicationsuccess">Send application success!</string>
    <string name="sendnotificationsuccess">Send notification success!</string>
    <string name="sendnewfeedsuccess">Post new feed success!</string>
    <!--Notification-->
    <string name="title_confirm">Confirm</string>
    <string name="title_notificaton">Notice ℹ️</string>
    <string name="title_warning">Warning ⚠️</string>
    <string name="message_borrow_vehicle">\u0020\u0020want to borrow your vehicle?</string>
    <string name="message_borrow_vehicle_success">You have successfully borrowed the vehicle.️🎉️🎉️🎉</string>
    <string name="message_was_borrow_vehicle_success">\u0020\u0020borrowed your vehicle. 🛵</string>
    <string name="message_denied_borrow_vehicle">🔊 You declined your request to borrow a vehicle of\u0020\u0020</string>
    <string name="message_denied_require_borrow_vehicle">\u0020\u0020was deny the request to borrow the vehicle. 💢</string>
    <string name="message_error_borrow_vehicle">🔊 An error occurred while borrowing a vehicle at\u0020\u0020</string>
    <string name="message_signin_success">🔊 Sign in on the new device successfully.</string>
    <string name="message_signin_warning">⛔ Your account is signed in on another device at\u0020\u0020</string>
    <!--permission-->
    <string name="permission_camera_granted">Camera permission granted</string>
    <string name="permission_camera_denied">Camera permission denied</string>
    <!--admin-->
    <!--sendnotification-->
    <string name="title_sendnotification">Title:</string>
    <string name="imgsendnotification">Link image:</string>
    <string name="shortcontentsendnotification">Description:</string>
    <string name="contentsendnotification">Content:</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!--Feedbacks-->
    <string name="feedback_not_approve">Not Approve</string>
    <string name="feedback_approve">Approved</string>
    <string name="feedback_title">TITLE</string>
    <string name="feedback_content">PURPOSE</string>
    <string name="feedback_user_mail">USER MAIL</string>
    <string name="feedback_date_time">DATE TIME</string>
    <string name="feedback_reply">REPLY</string>
    <string name="feedback_status">STATUS</string>
    <string name="feedback_approve_success">Approved success</string>
    <string name="feedback_approve_not_success">Not Approve</string>
    <string name="feedback_approved">Approved, can not edit!</string>
    <string name="button_Search">Search</string>
    <string name="button_SaveEdit">Save</string>
    <string name="txtPlateNumber">Plate number</string>
    <string name="txtLicenseInformation">License Information</string>
    <!---->
</resources>