<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".ui.home.HomeFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/hello_blank"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></TextView>

        <TextView
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@id/textView"
            app:layout_constraintTop_toTopOf="@id/textView"></TextView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        >
        <Button
            android:id="@+id/buttonQR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_qr"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:paddingLeft="@dimen/cardview_default_radius"
            android:paddingTop="@dimen/cardview_default_radius"
            android:paddingRight="@dimen/cardview_default_radius"
            android:paddingBottom="@dimen/cardview_default_radius"
            android:text="@string/button_qr"
            android:textSize="12dp"
            android:textColor="#000000" />

        <Button
            android:id="@+id/buttonFeedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_chat"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="@dimen/cardview_default_radius"
            android:paddingTop="@dimen/cardview_default_radius"
            android:paddingRight="@dimen/cardview_default_radius"
            android:paddingBottom="@dimen/cardview_default_radius"
            android:text="@string/button_feedback"
            android:textSize="12dp"
            android:textColor="#000000" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/buttonShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_share"
            android:paddingLeft="@dimen/cardview_default_radius"
            android:paddingTop="@dimen/cardview_default_radius"
            android:paddingRight="@dimen/cardview_default_radius"
            android:paddingBottom="@dimen/cardview_default_radius"
            android:text="@string/button_share"
            android:textColor="#000000"
            android:textSize="12dp" />

        <Button
            android:id="@+id/buttonHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:drawableTop="@drawable/ic_history"
            android:paddingLeft="@dimen/cardview_default_radius"
            android:paddingTop="@dimen/cardview_default_radius"
            android:paddingRight="@dimen/cardview_default_radius"
            android:paddingBottom="@dimen/cardview_default_radius"
            android:text="@string/button_history"
            android:textColor="#000000"
            android:textSize="12dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>