<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uiadmin.feedback.FeedbackReplyAdminActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/feedback_content"
        app:layout_constraintBottom_toTopOf="@+id/etContentAdmin"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etContentAdmin"
        android:layout_width="380dp"
        android:layout_height="200dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:focusable="false"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/etReply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="305dp"
        android:text="@string/feedback_reply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etReply"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <Button
        android:id="@+id/btnApprove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_border"
        android:padding="5dp"
        android:text="@string/feedback_reply"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="@+id/etReply"
        app:layout_constraintTop_toBottomOf="@+id/etReply" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/feedback_user_mail"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtUserMailAdmin"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtDateTimeAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/txtUserMailAdmin"
        app:layout_constraintTop_toBottomOf="@+id/txtUserMailAdmin" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_date_time"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtDateTimeAdmin"
        app:layout_constraintEnd_toStartOf="@+id/txtDateTimeAdmin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5" />

    <TextView
        android:id="@+id/txtTitleAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="TextView"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="19dp"
        android:text="@string/feedback_title1"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtUserMailAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="48dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>